--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      #- run: npm test
-      #- uses: JS-DevTools/npm-publish@v1
-      #  with:
-      #    token: ${{ secrets.NPM_AUTH_TOKEN }}
+      # - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
+       with:
+         token: ${{ secrets.NPM_AUTH_TOKEN }}
