--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install
+      - run: npm ci
+      - run: npm run build --if-present
       # - run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
